@@ -1,3 +1,11 @@
+2005-10-14  Brent Smith  <gnome@nextreality.net>
+
+	* src/yelp-window.c: (window_populate_find),
+	(window_find_entry_key_pressed_cb),
+	(window_find_buttons_set_sensitive):
+	- Allow Esc to close find bar, based on patch from Jorge Bernal,
+	fixes #167414
+
 2005-10-13  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-settings.c: (yelp_settings_open_preferences):
